[workspace]
members = ["blockset", "blockset-lib"]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Sergey Shandar"]
repository = "https://github.com/datablockset/blockset"

[workspace.dependencies]
io-trait = "0.9.0"
io-impl = "0.9.0"
io-test = "0.9.0"
wasm-bindgen-test = "0.3.41"
# nanvm-lib = "0.0.1"
nanvm-lib = { git = "https://github.com/functionalscript/nanvm", branch = "to-json" }
