[workspace]
members = ["blockset", "blockset-lib"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Sergey Shandar"]
repository = "https://github.com/datablockset/blockset"

[workspace.dependencies]
blockset-lib = { path = "blockset-lib", version = "0.7.0" }
io-trait = "0.11.0"
io-impl = "0.11.0"
io-test = "0.11.0"
wasm-bindgen-test = "0.3.49"
nanvm-lib = "0.1.0"
