[package]
name = "blockset-lib"
description = "BLOCKSET internal library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-trait.workspace = true
nanvm-lib.workspace = true

[dev-dependencies]
io-test.workspace = true
wasm-bindgen-test.workspace = true
