[package]
name = "blockset"
description = "BLOCKSET command line tool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# we should always use a specific version of the blockset-lib
blockset-lib = { path = "../blockset-lib", version = "=0.4.0" }
io-impl.workspace = true
