[package]
name = "blockset"
description = "BLOCKSET command line tool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockset-lib.workspace = true
io-impl.workspace = true
